--- a/server/views/startactivity.html
+++ b/server/views/startactivity.html
@@ -100,35 +100,37 @@
             <!-- BREADCRUMB-->
             <div class="row" style="height: 50px; position:relative" >
             
-                <div class="col-lg-7" style="padding-left: 0px;">
+                <div class="col-lg-6 col-md-7 col-sm-7 col-12" style="padding-left: 0px;">
                     <div class="btn btn-default btn-arrow-right"><a href="frontpage"><i class="fas fa-home bread"></i></a></div>
                     <div class="btn btn-default btn-arrow-right"><a href="sessions" class="bread">Gerir Sessões</a></div>
                     <div class="btn btn-default btn-arrow-right"><a href="" class="bread">Actividade</a></div>
                 </div>
     
             <!-- Sessão X e Nome Utente -->
-                <div class="col-lg-5 sessaoUtente" align="right" style="position:relative">
+                <div class="col-lg-6 col-md-5 col-sm-5 col-12 sessaoUtente" style="position:relative">
                     <div class="row">
                         <div class="col-12">
-                    <p id="sessaoX" class="SessaoLinha" align="right">Bananas com chocolatinho</p><p align="right" class="SessaoUtenteX SessaoLinha">Sessão</p>
+                            <p class="SessaoUtenteX SessaoLinha">Sessão</p>
+                            <p id="sessaoX" class="SessaoLinha">Bananas com chocolatinho</p>
                         </div>
-                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-12">
-                    <p id="utenteX" align="right" class="UtenteLinha">Travesseiro de Sintra</p><p align="right" class="SessaoUtenteX UtenteLinha">Utente</p>
-                            </div>
+                            <p class="SessaoUtenteX UtenteLinha">Utente</p>
+                            <p id="utenteX" class="UtenteLinha">Travesseiro de Sintra</p>
+                        </div>
                         </div>
                 </div>
             </div>
 
      <!-- Call to Action Well -->
-        <!--
+    <div class="subcontainer">
       <div class="text-white bg-secondary avisos">
-          <img class="img-responsive" width="50px" height="" src="images/warning-img-yellow.png" style="padding-bottom: 1px; padding-top: 1px;">
+          <img class="img-responsive imgaviso" width="50px" height="" src="images/warning-img-yellow.png" style="padding-bottom: 1px; padding-top: 1px;">
           
           <marquee behavior="scroll" scrollamount="8" direction="left">Verifique, no máximo intervalo de 15 minutos, se o utilizador do óculos sente algum incómodo! &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Ajuste os óculos de acordo com a sua preferência.</marquee>
       </div>
-   -->
+
       <!-- Heading Row -->
       <div class="row my-4 row-eq-height" style="position:relative">
         <div class="col-lg-6 col-sm-12" style="position:relative">
@@ -205,7 +207,7 @@
 
       </div>
       <!-- /.row -->
-
+</div>
     </div>
     <!-- /.container -->
 
