Apresenta os vídeos no planear e na actividade, contém o loading.

--- a/server/public/css/managesessions.css
+++ b/server/public/css/managesessions.css
@@ -252,3 +252,113 @@ input[type="date"]
     background-color: #66c366;
     outline: 5px solid #66c366;
 }
+
+/*************************** CHECKBOX DOS VÍDEOS *************************/
+
+/* The container */
+.container_text {
+    display: block;
+    position: relative;
+    margin-bottom: 2px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container_text input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 30px;
+    width: 30px;
+    background-color: #eee;
+    border-style: solid;
+    border-color: #3f3f3f;
+    
+}
+
+/* On mouse-over, add a grey background color */
+.container_text:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container_text input:checked ~ .checkmark {
+    background-color: #009b00;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.container_text input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.container_text .checkmark:after {
+    font-size: 30px;
+    left: 8px;
+    /*top: 5px;*/
+    width: 10px;
+    height: 20px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/************************ STYLE DOS VÍDEOS *****************************/
+
+.item{
+    display: inline-block;
+    margin-top: 10px;
+    margin-right: 12px;
+    margin-left: 12px;
+    text-align: center;
+}
+
+.thumbnail_search{
+    width: 200px !important;
+    height: 144px;
+    max-height: 360px;
+    max-width: 480px;
+}
+
+.col12_thumbnail{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.col12_text{
+    padding-left: 3px;
+    padding-right: 0px;
+}
+
+
+.titlesearch{
+    color: #3f3f3f;
+    width: 200px !important;
+    padding:5px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: 'Muli';
+    max-width: 200px;
+    text-align: left;
+}
