--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -102,10 +102,10 @@
 
       <div class="card-deck">
           <div class="card">
-            <a href="#"><img class="card-img-top" src="images/crop/cardboardLadyagain.jpg" alt=""></a>
+            <a href="activity"><img class="card-img-top" src="images/crop/cardboardLadyagain.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Iniciar Actividade</a>
+                <a href="activity">Iniciar Actividade</a>
               </h4>
               <p class="card-text">Sem qualquer passo intermédio, inicie de imediato a visualização de vídeos.</p>
             </div>
