--- a/server/views/managesessions.html
+++ b/server/views/managesessions.html
@@ -9,9 +9,12 @@
         <meta name="author" content="">
 
         <title>ImmersiveMind</title>
+        <script src="/js/search.js"></script>
+        <script src="https://apis.google.com/js/client.js?onload=init"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/js/server.js"></script>
         <script src="/js/popularSessoes.js"></script>
+        
 
 
         <!-- Bootstrap core JavaScript -->
@@ -195,11 +198,26 @@
                     <!-- FEITO NO POPULAR SESSOES NA FUNÇÃO ChamarCategorias() -->
                 </div>
                 
-                        
-                    <div class="form-group">
+                <!------------------------------------------------------------------>
+                <!--                    PROCURAR VÍDEOS                           -->
+                <!------------------------------------------------------------------>        
+                <div class="form-group">
                     <label for="input360link">Procurar vídeos 360º (opcional)</label>
-                    <input type="text" id="360link" class="form-control">
+                    
+                    <!------------------------- SEARCH BAR --------------------->
+                    <div class="input-group">
+                        <input class="form-control py-2 border-right-0 border searchs" type="search" value="" id="search-input" placeholder="Procure vídeos e seleccione os que quer visualizar">
+                            <span class="input-group-append">
+                                <div class="input-group-text"><a onclick="search_list_sessao()"><i class="fa fa-search"></i></a></div>
+                            </span>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div id="results" class="form-group" align=center></div>
+                        </div>
+                    </div>
                 </div>
+                <!------------------------------------------------------------------>
                 
                 <div class="form-group">
                     <label>Escolha uma imagem (opcional)</label>
