--- a/server/public/template/templatevideosessao.html
+++ b/server/public/template/templatevideosessao.html
@@ -7,7 +7,7 @@
          <div class="row">
             <div class="col-lg-12 col12_text">
                 <p></p><label class="container container_text">
-                        <input type="checkbox" onclick="saveVideo(this, '{{videoId}}', '{{title}}')"><span class="checkmark"></span>
+                        <input type="checkbox" onclick="saveVideoIfChecked(this, '{{videoId}}', '{{titleEscaped}}')"><span class="checkmark"></span>
                         <p class="titlesearch">&emsp;{{title}}</p></label>
                 </div>
             </div>
