--- a/server/views/managesessions.html
+++ b/server/views/managesessions.html
@@ -213,7 +213,16 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div id="results" class="form-group" align=center></div>
+                            <div id="results" class="form-group" align=center>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="meusVideos" class="input-group" style="display: none">
+                        <label >Os meus vídeos: </label>
+                        <div  class="row">
+                            <div class="col-lg-12">
+                                <div id="videosSelecionados" ></div>
+                            </div>
                         </div>
                     </div>
                 </div>
