--- a/server/views/startactivity.html
+++ b/server/views/startactivity.html
@@ -10,13 +10,14 @@
 
         <title>ImmersiveMind</title>
         
+        
         <script src="/js/search.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://apis.google.com/js/client.js?onload=init"></script>
         <script src="/js/server.js"></script>
         <script src="/js/popularActividade.js"></script>
        
-        
+        <script src="https://www.youtube.com/iframe_api"></script>
 
         <!-- Bootstrap core JavaScript -->
         <script src="vendor/jquery/jquery.min.js"></script>
@@ -151,9 +152,6 @@
             </div>
         
         </div>
-          <script>
-            document.getElementById("iframes").addEventListener("click",function(){window.alert("Olá")});
-          </script>
         
         
         <!-- /.col-lg-8 -->
